Github link, scrollbar fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,17 +19,14 @@ body,
 
     .listbox-options {
         @apply absolute mt-1 max-h-80 w-40 overflow-auto rounded-md bg-neutral-800 py-1 shadow-lg z-50;
+        scrollbar-width: thin;
 
         &::-webkit-scrollbar {
-            width: 8px;
-        }
-        
-        &::-webkit-scrollbar-track {
-            @apply bg-neutral-800; 
+            @apply w-2;
         }
         
         &::-webkit-scrollbar-thumb {
-            @apply bg-neutral-700;
+            @apply bg-neutral-700 rounded-full;
         }
         
         &::-webkit-scrollbar-thumb:hover {
